Fixed width for horizontal scroll in #container.

--- a/styles.css
+++ b/styles.css
@@ -863,7 +863,7 @@ body {
     }
 
     #container {
-        width: 100vw;
+        width: 90vw;
         grid-template-columns: 0 auto;
     }
 
